# MiniJPEGDecoder

./: CMakeLists.txt  README.md
include/: jpeg_decoder.hpp
src/: jpeg_decoder_test.cpp
